# best-mermaid

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  INSTALL.md  README.md  build.sh  install.sh  package.json  test.md
.claude/: settings.local.json
docs/: SELF_CONTAINED.md
scripts/: create_standalone.sh  install_deps.sh
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.h
src/config/: config.cpp  config.h
src/fileutils/: file_handler.cpp  file_handler.h
src/markdown/: markdown_parser.cpp  markdown_parser.h
src/mermaid/: mermaid_extractor.cpp  mermaid_extractor.h
src/renderer/: renderer.cpp  renderer.h
